--- a/app/views/home/catques.html.erb
+++ b/app/views/home/catques.html.erb
@@ -14,7 +14,7 @@
    <% @questions.each do |question| %>
 	 	<div class="jumbotron">
             <h3> <%= question.content %></h3>
-            <h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.email %></h5>
+            <h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name %></h5>
             <% if user_signed_in? %>
 <% if can? :update, question  %>
 <%= link_to 'Edit', edit_question_path(question) %>
