--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 	 	<div class="jumbotron">
             <h3> <%= image_tag question.user.picture.thumb.url if question.user.picture? %>  <%= link_to question.content, question_path(question) %></h3>
             
-            <h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.email %></h5>
+            <h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name %></h5>
             <%= image_tag question.picture.url if question.picture? %>
             <br>
             <% if user_signed_in? %>
