--- a/app/views/home/myques.html.erb
+++ b/app/views/home/myques.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-6 col-md-offset-3">
 <% @questions.each do |question| %>
  <h3> <%= question.content %></h3>
- <%= time_ago_in_words(question.created_at) %> ago by <%= question.user.email %> <br>
+ <%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name %> <br>
  <%= image_tag question.picture.url if question.picture? %>
 </br >
 <%= link_to 'Edit', edit_question_path(question) %>
