--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,28 @@
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="jumbotron">
 <h2>Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
+  <p>
     <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em><br />
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
+    <%= f.password_field :password,class: "form-control", :placeholder => "New Password",autofocus: true, autocomplete: "off" %>
+  </p>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  <p>
+    <%= f.password_field :password_confirmation,class: "form-control", :placeholder => "Password Confirmation",autocomplete: "off" %>
+  </p>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
+    <%= f.submit "Change my password",class: "btn btn-primary" %>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
+</div>
+
