--- a/app/views/home/myques.html.erb
+++ b/app/views/home/myques.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 <% @questions.each do |question| %>
- <h3> <%= question.content %></h3>
+ <h3> <%= image_tag question.user.picture.thumb.url if question.user.picture? %> <%= question.content %></h3>
  <%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name %> <br>
  <%= image_tag question.picture.url if question.picture? %>
 </br >
