--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,15 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <%= form_tag root_path, method: :get do %>
+        <%= text_field_tag :query, params[:query],class: "form-control" ,:placeholder => "Search" %>
+        <%= submit_tag "Search", class: "btn btn-primary btn-sm", content: :nil %>
+      <% end %>
+      
+        </div>
+      </form>
 
       <ul class="nav navbar-nav navbar-right">
 
