--- a/app/views/home/catques.html.erb
+++ b/app/views/home/catques.html.erb
@@ -13,7 +13,11 @@
 <% if @questions.any? %>
    <% @questions.each do |question| %>
 	 	<div class="jumbotron">
-            <h3> <%= image_tag question.user.picture.thumb.url if question.user.picture? %><%= question.content %></h3>
+            <h3> <% if question.user.picture.present?  %>
+        <%= image_tag question.user.picture.thumb.url  %>
+        <% else %>
+        <%= gravatar_for question.user %>
+        <% end %><%= question.content %></h3>
             <h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name %></h5>
             <%= image_tag question.picture.url if question.picture? %>
             <br >
