--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,13 @@
     </div>
    <% @questions.each do |question| %>
 	 	<div class="jumbotron">
-            <h3> <%= image_tag question.user.picture.thumb.url if question.user.picture? %>  <%= link_to question.content, question_path(question) %></h3>
+            <h3> <% if question.user.picture.present?  %>
+        <%= image_tag question.user.picture.thumb.url  %>
+        <% else %>
+        <%= gravatar_for question.user %>
+        <% end %>
+        <%= link_to question.content, question_path(question) %>
+      </h3>
             
             <h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name %></h5>
             <%= link_to image_tag question.picture.url if question.picture? %>
