--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <%= form_tag root_path, method: :get do %>
-        <%= text_field_tag :query, params[:query],class: "form-control" ,:placeholder => "Search" %>
+        <%= text_field_tag :query, params[:query],class: "form-control" ,:placeholder => "Search Questions" %>
         <%= submit_tag "Search", class: "btn btn-primary btn-sm", content: :nil %>
       <% end %>
       
@@ -32,6 +32,8 @@
 
         <% if user_signed_in? %>
 <li><%= link_to "My Questions", myquestions_path %></li>
+<li><%= link_to "Chat Rooms", chat_rooms_path %></li>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag current_user.picture.small.url if current_user.picture? %> Account <span class="caret"></span></a>
           <ul class="dropdown-menu">
