--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -9,7 +9,7 @@
       <% end %>
      </div>
 	<% if can? :destroy, answer %>
-<small><%= link_to "Delete", question_answer_path(answer.question, answer), method: :delete %></small>
+<small><%= link_to "Delete", question_answer_path(answer.question, answer), method: :delete,remote: true %></small>
 <% end %>
 <% end %>
 </p>
