--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-1">
         <% if message.user.picture.present?  %>
-        <%= image_tag message.user.picture.thumb.url  %>
+        <%= image_tag message.user.picture.avatar.url  %>
         <% else %>
         <%= gravatar_for message.user %>
         <% end %>
