--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -17,8 +17,8 @@
   <p>
 <%= f.select :category_id, Category.all.collect {|p| [ p.content, p.id ] }, {prompt: 'Select Topic'},class: "form-control",required: true %>
   </p>
-  <p>
-    <%= f.file_field :picture %>
+  <p> <%= f.label "Upload Picture" %>
+    <%= f.file_field :picture,class: "form-control" %>
      </p>
 
     <%= f.submit params[:id] ? "Edit" : "Ask", class: "btn btn-primary" %>
