--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,24 +2,20 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 <h3><%= image_tag @question.user.picture.thumb.url if @question.user.picture? %>  <%= @question.content %></h3>
-<p class="text-muted"><%= time_ago_in_words(@question.created_at) %> ago by <%= @question.user.email %> 
+<p class="text-muted"><%= time_ago_in_words(@question.created_at) %> ago by <%= @question.user.name %> 
 	<br>
 <%= image_tag @question.picture.url if @question.picture? %>
-
+</br >
+ <div id="addanswer<%= @question.id %>">
 <% if @question.answers.any? %>
-<h4>Answers</h4>
+<h4><%=  pluralize @question.answers.count, "Answer" %></h4>
 <%= render @question.answers.sort {|a,b| b.get_upvotes.size <=> a.get_upvotes.size} %>
 <% end %>
-<%= form_for [@question, @answer] do |f| %>
-    <%= f.text_area :content ,class: "form-control" ,:placeholder => "Your Answer ",required: true %>
-     <br>
-      <%= f.submit "Add Answer", class: "btn btn-primary btn-xs" %>
-    <% end %>
-    <br>
+</div>
 <% if can? :update, @question %>
 <%= link_to 'Edit', edit_question_path(@question) %> |
 <% end %>
-<%= link_to 'Back', questions_path %>
+<%= link_to 'Back', root_path %>
 </div>
 </div>
 
