--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
       </button>
          
 
-         <a class="navbar-brand" href="<%= root_path %>">Forum</a>
+         <a class="navbar-brand" href="<%= root_path %>"><i class="fa fa-camera-retro fa-sm"></i> Forum</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
