--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3831,6 +3831,7 @@ tbody.collapse.in {
     text-decoration: none;
     background-color: transparent;
     background-image: none;
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
     cursor: not-allowed;
 }
 
@@ -6904,7 +6905,7 @@ button.close {
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.0001) 100%);
     background-repeat: repeat-x;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
 }
 
 .carousel-control.right {
@@ -6914,7 +6915,7 @@ button.close {
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.5) 100%);
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.5) 100%);
     background-repeat: repeat-x;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
 }
 
 .carousel-control:hover,
@@ -7385,7 +7386,7 @@ button.close {
     background-image: -o-linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
     background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff54b4eb', endColorstr='#ff1d9ce5', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff54b4eb', endColorstr='#ff1d9ce5', GradientType=0);
     border-bottom: 1px solid #178acc;
     filter: none;
     -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
@@ -7402,7 +7403,7 @@ button.close {
     background-image: -o-linear-gradient(#04519b, #044687 60%, #033769);
     background-image: linear-gradient(#04519b, #044687 60%, #033769);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff04519b', endColorstr='#ff033769', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff04519b', endColorstr='#ff033769', GradientType=0);
     filter: none;
     border-bottom: 1px solid #022241;
 }
@@ -7436,7 +7437,7 @@ button.close {
     background-image: -o-linear-gradient(#ffffff, #ffffff 60%, #f5f5f5);
     background-image: linear-gradient(#ffffff, #ffffff 60%, #f5f5f5);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff5f5f5', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff5f5f5', GradientType=0);
     filter: none;
     border-bottom: 1px solid #e6e6e6;
 }
@@ -7454,7 +7455,7 @@ button.close {
     background-image: -o-linear-gradient(#ffffff, #ffffff 60%, #f5f5f5);
     background-image: linear-gradient(#ffffff, #ffffff 60%, #f5f5f5);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff5f5f5', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff5f5f5', GradientType=0);
     filter: none;
     border-bottom: 1px solid #e6e6e6;
 }
@@ -7464,7 +7465,7 @@ button.close {
     background-image: -o-linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
     background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff54b4eb', endColorstr='#ff1d9ce5', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff54b4eb', endColorstr='#ff1d9ce5', GradientType=0);
     filter: none;
     border-bottom: 1px solid #178acc;
 }
@@ -7474,7 +7475,7 @@ button.close {
     background-image: -o-linear-gradient(#88c149, #73a839 60%, #699934);
     background-image: linear-gradient(#88c149, #73a839 60%, #699934);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff88c149', endColorstr='#ff699934', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff88c149', endColorstr='#ff699934', GradientType=0);
     filter: none;
     border-bottom: 1px solid #59822c;
 }
@@ -7484,7 +7485,7 @@ button.close {
     background-image: -o-linear-gradient(#04519b, #033c73 60%, #02325f);
     background-image: linear-gradient(#04519b, #033c73 60%, #02325f);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff04519b', endColorstr='#ff02325f', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff04519b', endColorstr='#ff02325f', GradientType=0);
     filter: none;
     border-bottom: 1px solid #022241;
 }
@@ -7494,7 +7495,7 @@ button.close {
     background-image: -o-linear-gradient(#ff6707, #dd5600 60%, #c94e00);
     background-image: linear-gradient(#ff6707, #dd5600 60%, #c94e00);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffff6707', endColorstr='#ffc94e00', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffff6707', endColorstr='#ffc94e00', GradientType=0);
     filter: none;
     border-bottom: 1px solid #aa4200;
 }
@@ -7504,7 +7505,7 @@ button.close {
     background-image: -o-linear-gradient(#e12b31, #c71c22 60%, #b5191f);
     background-image: linear-gradient(#e12b31, #c71c22 60%, #b5191f);
     background-repeat: no-repeat;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffe12b31', endColorstr='#ffb5191f', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe12b31', endColorstr='#ffb5191f', GradientType=0);
     filter: none;
     border-bottom: 1px solid #9a161a;
 }
