--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
     <script src="https://use.fontawesome.com/d800be2e01.js"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+  <link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
   </head>
 <%= render 'layouts/header'%>
   <body>
@@ -17,3 +19,4 @@
   </div>
   </body>
 </html>
+
