--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title>Forum</title>
     <%= csrf_meta_tags %>
     <script src="https://use.fontawesome.com/d800be2e01.js"></script>
+
+    <script src="/assets/bootstrap.js"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
