--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.text_field :content,class: "form-control" ,:placeholder => "Email",required: true %>
+    <%= f.text_field :content,class: "form-control" ,:placeholder => "Category Name",required: true %>
   </div>
 <br >
   <div class="actions">
