--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
   <div class="col-md-8">
    <div class="text-center">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-      Ask A Question
+      <i class='fa fa-edit fa-sm'></i> Ask A Question
     </button>
     <br />
     <br />
@@ -53,7 +53,7 @@
               
               <% end %>
               <% else %>
-              <h2>Log in</h2>
+              <h2><i class='fa fa-sign-in fa-sm'></i> Sign in</h2>
 
               <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
               <p>
@@ -102,7 +102,8 @@
      <div class="media-body">
       <h3 class="media-heading"><%= link_to question.content, question_path(question) %></h3>
     <%= link_to image_tag(question.picture.url), question.picture.url if question.picture? %>
-    <h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name.capitalize %></h5>
+    <h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name.capitalize %> 
+    
     <% if user_signed_in? %>
     <% if can? :update, question  %>
     <%= link_to 'Edit', edit_question_path(question) %>
@@ -111,6 +112,7 @@
     <%= link_to 'Delete', question,method: :delete %>
     <% end %>
     <% end %>
+    </h5>
     </div>
   </li>
 </ul>
@@ -130,10 +132,16 @@
   <% end %>
 </div>
 </br >
+<% if user_signed_in? %>
 <%= form_for [question, @answer] ,remote: true do |f| %>
 <%= f.text_area :content ,class: "form-control form-content" ,:placeholder => "Your Answer ",required: true %>
 <br>
 <%= f.submit("Add Answer", class: "btn btn-primary btn-xs",remote: true) %>
+<% end %>
+<% else %>
+<%= link_to new_user_session_path do %>
+ <i class='fa fa-sign-in fa-sm'></i> Sign in to answer this question.
+  <% end %>
 <% end %>
 <br>
 </div>
