--- a/app/views/home/myques.html.erb
+++ b/app/views/home/myques.html.erb
@@ -1,23 +1,36 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-<% @questions.each do |question| %>
- <h3> <% if question.user.picture.present?  %>
-        <%= image_tag question.user.picture.thumb.url  %>
-        <% else %>
-        <%= gravatar_for question.user %>
-        <% end %><%= question.content %></h3>
- <%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name %> <br>
- <%= image_tag question.picture.url if question.picture? %>
-</br >
-<%= link_to 'Edit', edit_question_path(question) %>
-<%= link_to 'Delete', question,method: :delete %>
-<% if question.answers.any? %>
-<h4>Answers</h4>
-<%= render question.answers %>
-<% end %>
-<% end %>
-<br >
-<%= will_paginate @questions%>
+		<% @questions.each do |question| %>
 
-</div>
+		<ul class="media-list">
+			<li class="media">
+				<a class="pull-left" href="#">
+					<% if question.user.picture.present?  %>
+					<%= image_tag question.user.picture.thumb.url  %>
+					<% else %>
+					<%= gravatar_for question.user %>
+					<% end %> 
+				</a>
+				<div class="media-body">
+					<h3 class="media-heading"><%= question.content %></h3>
+					<%= image_tag question.picture.url if question.picture? %>
+					<h5 class="text-muted"><%= time_ago_in_words(question.created_at) %> ago by <%= question.user.name.capitalize %></h5>
+					<%= link_to 'Edit', edit_question_path(question) %>
+					<%= link_to 'Delete', question,method: :delete %>
+					<div id="addanswer<%= question.id %>">
+					<% if question.answers.any? %>
+					<h4><%=  pluralize question.answers.count, "Answer" %></h4>
+					<%= render question.answers %>
+					<% end %>
+					</div>
+					</div>
+					</li>
+		</ul>
+					<% end %>
+					<br >
+			
+
+		<%= will_paginate @questions%>
+
+	</div>
 </div>
