--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,19 +31,31 @@
       <ul class="nav navbar-nav navbar-right">
 
         <% if user_signed_in? %>
-<li><%= link_to "My Questions", myquestions_path %></li>
+<li><%= link_to  myquestions_path do %>
+  <i class='fa fa-book fa-sm'></i> My Questions
+              <% end %>
+</li>
 <li><%= link_to "Chat Rooms", chat_rooms_path %></li>
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag current_user.picture.small.url if current_user.picture? %> Account <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Settings", edit_user_registration_path(current_user) %></li>
+            <li><%= link_to  edit_user_registration_path(current_user) do %>
+               <i class='fa fa-cogs fa-sm'></i> Settings
+              <% end %>
+            </li>
             <li role="separator" class="divider"></li>
-            <li><%= link_to "Logout", destroy_user_session_path, method: "delete" %></li>
+            <li><%= link_to destroy_user_session_path, method: "delete" do %>
+              <i class='fa fa-power-off fa-sm'></i> Logout
+              <% end %>
+            </li>
           </ul>
         </li>
         <% else %>
-<li><%= link_to "Sign in" , new_user_session_path %></li>
+<li><%= link_to new_user_session_path do %>
+ <i class='fa fa-sign-in fa-sm'></i> Sign in
+  <% end %>
+</li>
 <% end %>
         
       </ul>
